[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge"
version = "0.2.0"
description = "Enterprise prompt engineering — version control, A/B testing, compression, and linting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Naveen Kumar Baskaran"}]
keywords = ["prompt", "llm", "engineering", "optimization", "ab-testing"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
