[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge"
version = "2.0.0"
description = "Enterprise prompt engineering — version control, A/B testing, compression, and linting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Naveen Kumar Baskaran"}]
keywords = ["prompt", "llm", "engineering", "optimization", "ab-testing", "linting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
